add features about courses and moved files for another modules
