# app/backend/internal/handler/response/course_response.go
@@ -1,0 +1,12 @@
+package response
+
+type CourseResponse struct {
+	UUID     string `json:"uuid"`
+	Name     string `json:"name"`
+	Modality string `json:"modality"`
+	Location string `json:"location"`
+}
+
+type ManyCoursesResponse struct {
+	Courses []CourseResponse `json:"courses"`
+}
