# app/backend/internal/handler/response/user_response.go
@@ -1,13 +1,9 @@
 package response
 
-import "time"
-
 type UserResponse struct {
-	ID        string    `json:"id"`
-	Name      string    `json:"name"`
-	Email     string    `json:"email"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
+	UUID  string `json:"uuid"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
 }
 
 type ManyUsersResponse struct {
